--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Konrad-lab</title>
-    <link rel="stylesheet" href="konradcss.css">
+    <link rel="stylesheet" href="syle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
@@ -53,6 +53,6 @@
         </div>
     </main>
 
-    <script src="konradscript.js"></script>
+    <script src="uwu.js"></script>
 </body>
 </html> 
