--- a/index.html
+++ b/index.html
@@ -38,19 +38,17 @@
                 <p class="terminal-line">> - Imádom a macskákat</p>
                 <p class="terminal-line">> - Linuxot használok már mióta</p>
                 <p class="terminal-line">> - Vibe coder... Egy szinten...</p>
+                <p class="terminal-line">>  <a href="https://muaves.github.io/projects" target="_blank" class="glow-button github">Projekteim itt találhatóak! </a>
                 <p class="terminal-line">> - Most Mincecraft pluginok kreálásában érdeklődöm...</p>
                 <p class="terminal-line">> sudo rm rf / </p>
             </div>
         </div>
 
         <div class="social-links">
-            <a href="https://github.com/Konrad-lab" target="_blank" class="glow-button github">
+            <a href="https://github.com/Muaves" target="_blank" class="glow-button github">
                 <i class="fab fa-github"></i>
             </a>
-            <a href="https://discord.gg/K298HA9j2P" target="_blank" class="glow-button discord">
-                <i class="fab fa-discord"></i>
-            </a>
-        </div>
+         
     </main>
 
     <script src="uwu.js"></script>
