--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <p class="terminal-line">> - Imádom a macskákat</p>
                 <p class="terminal-line">> - Linuxot használok már mióta</p>
                 <p class="terminal-line">> - Vibe coder... Egy szinten...</p>
-                <p class="terminal-line">>  <a href="https://muaves.github.io/projects" target="_blank">Projekteim itt találhatóak!</a>
+                <p class="terminal-line">> - <a href="https://muaves.github.io/projects" target="_blank">Projekteim itt találhatóak!</a>
                 <p class="terminal-line">> - Most Mincecraft pluginok kreálásában érdeklődöm...</p>
                 <p class="terminal-line">> sudo rm rf / </p>
             </div>
