--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>GBRR - PAGE</title>
     <meta name="description" content="Welcome to my page ig">
     <meta name="author" content="GBRR - Muavees">
+    <link rel="shortcut icon" href="../GBRR - PAGE.ico" type="image/x-icon">
     
 
 
@@ -1418,3 +1419,4 @@
     </script>
 </body>
 </html>
+
