--- a/index.html
+++ b/index.html
@@ -1402,7 +1402,7 @@
         function initAnimations() {
             const heroSubtitle = document.getElementById('heroSubtitle');
             if (heroSubtitle) {
-                typeText(heroSubtitle, 'Welcome to the real world, Neo...', 80);
+                typeText(heroSubtitle, 'Welcome to the real world, Muaves...', 80);
             }
             
             addFadeInUpAnimations(document.getElementById('homePage'));
@@ -1419,4 +1419,5 @@
     </script>
 </body>
 </html>
+
 
