--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
 
     <nav class="navbar">
         <div class="nav-container">
-            <div class="nav-logo glitch" data-text="MATRIX">MATRIX</div>
+            <div class="nav-logo glitch" data-text="MATRIX">GBRR</div>
             <ul class="nav-links" id="navLinks">
                 <li><a href="#" class="nav-link active" data-page="home">HOME</a></li>
                 <li><a href="#" class="nav-link" data-page="projects">PROJECTS</a></li>
@@ -1769,4 +1769,5 @@
     </script>
 </body>
 </html>
+
 
