--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
                             </p>
                         </div>
                         <div class="card feature-card">
-                            <div class="feature-icon">🎨</div>
+                            <div class="feature-icon" title="Muavesgcs2509">🎨</div>
                             <h3 class="feature-title">makes it look nice</h3>
                             <p class="feature-description">
                                 if it doesn't look good, what's the point? style matters, even for buttons
@@ -1072,7 +1072,7 @@
             adminToggle.addEventListener('click', () => {
                 if (!isAdmin) {
                     const password = prompt('Enter admin password:');
-                    if (password === 'iloveyou<3') {
+                    if (password === 'Muavesgcs2509') {
                         isAdmin = true;
                         adminToggle.textContent = 'logout';
                         adminToggle.classList.add('active');
@@ -1290,4 +1290,3 @@
     </script>
 </body>
 </html>
-
