--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
 <body>
     <nav class="navbar">
         <div class="nav-container">
-            <div class="nav-logo" title="FINALLY DROPPED">GBRR'page</div>
+            <div class="nav-logo" title="FINALLY DROPPED">GBRR's page</div>
             <ul class="nav-links" id="navLinks">
                 <li><a href="#" class="nav-link active" data-page="home">home</a></li>
                 <li><a href="#" class="nav-link" data-page="projects">projects</a></li>
