--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
                 <li><a href="#" class="nav-link active" data-page="home">home</a></li>
                 <li><a href="#" class="nav-link" data-page="projects">projects</a></li>
                 <li><a href="#" class="nav-link" data-page="contact">contact</a></li>
-                <li><a href="#" class="nav-link" data-page="about" title="I love Csenge VERYYY MUCH!! <3">about</a></li>
+                <li><a href="#" class="nav-link" data-page="about">about</a></li>
                 <li class="admin-only"><a href="#" class="nav-link" data-page="system">system</a></li>
                 <li><button class="admin-toggle" id="adminToggle">login</button></li>
             </ul>
@@ -1072,7 +1072,7 @@
             adminToggle.addEventListener('click', () => {
                 if (!isAdmin) {
                     const password = prompt('Enter admin password:');
-                    if (password === 'Muavesgcs2509') {
+                    if (password === 'Muaves2509') {
                         isAdmin = true;
                         adminToggle.textContent = 'logout';
                         adminToggle.classList.add('active');
@@ -1290,3 +1290,4 @@
     </script>
 </body>
 </html>
+
