--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GBRR's page</title>
-    <meta name="description" content="Welcome to GBRR's page ig">
-    <meta name="author" content="GBRR - Muavees">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:title" content="GBRR's page" />
+        <meta property="og:image" content="https://github.com/Muaves/muaves.github.io/blob/main/fav_cat.png?raw=true"/>
+        <meta property="og:description" content="My page" />
+        <meta name="theme-color" content="#c644af">
+        <meta name="twitter:card" content="summary_large_image">
     <link rel="shortcut icon" href="../GBRR - PAGE.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
@@ -65,8 +69,7 @@
             left: 0;
             right: 0;
             z-index: 100;
-            background: rgba(20, 18, 30, 0.95);
-            backdrop-filter: blur(10px);
+            backdrop-filter: blur(13px);
             border-bottom: 1px solid var(--border);
         }
 
@@ -1290,4 +1293,3 @@
     </script>
 </body>
 </html>
-
