--- a/old_backup.html
+++ b/old_backup.html
@@ -6,11 +6,11 @@
     <title>GBRR's page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta property="og:title" content="GBRR's page" />
-        <meta property="og:image" content="https://github.com/Muaves/muaves.github.io/blob/main/fav_cat.png?raw=true"/>
+        <meta property="og:image" content="https://github.com/Muaves/muaves.github.io/blob/main/img/fav_cat.png?raw=true"/>
         <meta property="og:description" content="My page" />
         <meta name="theme-color" content="#c644af">
         <meta name="twitter:card" content="summary_large_image">
-    <link rel="shortcut icon" href="../GBRR - PAGE.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/GBRR - PAGE.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
     <style>
@@ -1293,3 +1293,4 @@
     </script>
 </body>
 </html>
+
