--- a/404.html
+++ b/404.html
@@ -94,6 +94,8 @@
     <button onclick="document.getElementById('music').play()">
       ▶ PLAY LAVA CHICKEN
     </button>
+    <p>Or watch a yt video:</p>
+    <iframe src="https://youtu.be/qNAYgGxz8Gs?si=Bc7ashviSbROOPqz" frameborder="0"></iframe>
 
     <div class="footer">
       Not found<br>but not forgotten.
