--- a/404.html
+++ b/404.html
@@ -95,7 +95,11 @@
       ▶ PLAY LAVA CHICKEN
     </button>
     <p>Or watch a yt video:</p>
-    <iframe src="https://youtu.be/qNAYgGxz8Gs?si=Bc7ashviSbROOPqz" frameborder="0"></iframe>
+    <div style="border:2px solid #00ff00; padding:8px; background:black; ">
+      <iframe width="320" height="180" src="https://www.youtube.com/embed/qNAYgGxz8Gs" frameborder="0" allowfullscreen>
+      </iframe>
+    </div>
+ 
 
     <div class="footer">
       Not found<br>but not forgotten.
