--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
     <style>
+        html {
+            scroll-behavior: smooth;
+        }
         * {
             margin: 0;
             padding: 0;
@@ -398,45 +401,25 @@
                 </div>
             </div>
         </section>
-
+ <section id="links">
         <div class="divider"></div>
-        <!-- Majd, meg raer
-    <section id="gallery">
-      <div class="card">
-        <h2>Gallery</h2>
-        <div class="gallery-grid">
-          <div class="gallery-item">IMAGE 1</div>
-          <div class="gallery-item">IMAGE 2</div>
-          <div class="gallery-item">IMAGE 3</div>
-          <div class="gallery-item">IMAGE 4</div>
-          <div class="gallery-item">IMAGE 5</div>
-          <div class="gallery-item">IMAGE 6</div>
-          <div class="gallery-item">IMAGE 7</div>
-          <div class="gallery-item">IMAGE 8</div>
-        </div>
-        <p style="text-align: center; color: #666; margin-top: 16px;">Click on any image to view full size</p>
-      </div>
-    </section>
-     -->
-
-        <section id="links">
             <div class="card">
                 <h2>Useful Links</h2>
                 <div class="grid-2">
                     <div>
                         <h3>Socials</h3>
                         <ul class="link-list">
-                            <li><a href="https://discord.com/users/1198173046196944962">Discord</a></li>
-                            <li><a href="https://github.com/muaves">Github</a></li>
-                            <li><a href="https://muaves.github.io/lszszv">lszszv</a></li>
-                            <li><a href="https://redstone-launcher.com/">Redstone Launcher</a></li>
+                            <li><a href="https://discord.com/users/1198173046196944962" target="_blank">Discord</a></li>
+                            <li><a href="https://github.com/muaves" target="_blank">Github</a></li>
+                            <li><a href="https://muaves.github.io/lszszv" target="_blank">Lszszv</a></li>
+                            <li><a href="https://redstone-launcher.com/" target="_blank">Redstone Launcher</a></li>
                         </ul>
                     </div>
                     <div>
                         <h3>Resources</h3>
                         <ul class="link-list">
-                            <li style="text-decoration: line-through;"><a href="#">HTML Tutorial</a></li>
-                            <li style="text-decoration: line-through;"><a href="#">JavaScript Guide</a></li>
+                            <li><a href="https://muaves.com/portfolio-api" target="_blank">Portfolio API</a></li>
+                            <li><a href="https://github.com/Muaves/muavescli" target="_blank">JavaScript Guide</a></li>
                             <li style="text-decoration: line-through;"><a href="#">CSS Library</a></li>
                             <li style="text-decoration: line-through;"><a href="#">Grading system</a></li>
                             <li style="text-decoration: line-through;"><a href="#">Web Server</a></li>
@@ -503,7 +486,7 @@
 
         function handleSubmit(event) {
             event.preventDefault();
-            alert('Thank you for your message! We will get back to you soon. Or not :)');
+            alert('Service is currently unavailable, please contact me through discord');
             event.target.reset();
         }
 
