--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                         <h3>Resources</h3>
                         <ul class="link-list">
                             <li><a href="https://muaves.com/portfolio-api" target="_blank">Portfolio API</a></li>
-                            <li><a href="https://github.com/Muaves/muavescli" target="_blank">JavaScript Guide</a></li>
+                            <li><a href="https://github.com/Muaves/muavescli" target="_blank">Portfolio CLI</a></li>
                             <li style="text-decoration: line-through;"><a href="#">CSS Library</a></li>
                             <li style="text-decoration: line-through;"><a href="#">Grading system</a></li>
                             <li style="text-decoration: line-through;"><a href="#">Web Server</a></li>
