--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                             <input type="text" placeholder="Your Name" required>
                             <input type="email" placeholder="Your Email" required>
                             <textarea placeholder="Your Message" required></textarea>
-                            <button type="submit" class="nav-btn">SEND MESSAGE</button>
+                            <a type="submit" class="nav-btn" href="https://discord.com/users/1198173046196944962" translate="yes" target="_blank">SEND MESSAGE</a>
                         </form>
                     </div>
                 </div>
